--- a/modules/ROOT/pages/blogs/entry/apache-netbeans-guest-blog-edward.adoc
+++ b/modules/ROOT/pages/blogs/entry/apache-netbeans-guest-blog-edward.adoc
@@ -28,7 +28,14 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 
 I'm a big fan of NetBeans, and a team-lead of 2pm.tech crew, a group of independent developers from Russia. 
