--- a/modules/ROOT/pages/blogs/entry/php-conditional-breakpoints-and-new.adoc
+++ b/modules/ROOT/pages/blogs/entry/php-conditional-breakpoints-and-new.adoc
@@ -29,7 +29,14 @@
 :toc-title:
 :page-syntax: true
 :experimental:
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 
 Hi all. Today, we will show you some new features which will be available in the *next NetBeans version*, maybe
