--- a/modules/ROOT/pages/blogs/entry/simplified-apache-netbeans-welcome-screen.adoc
+++ b/modules/ROOT/pages/blogs/entry/simplified-apache-netbeans-welcome-screen.adoc
@@ -28,7 +28,15 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
+
 
 
 To simplify the Welcome Screen and, in particular, replace all links to netbeans.org with netbeans.apache.org, I have created this issue and pull request:
