--- a/modules/ROOT/pages/about/history.adoc
+++ b/modules/ROOT/pages/about/history.adoc
@@ -27,6 +27,10 @@
 :icons: font
 include::partial$database.adoc[]
 
+ifdef::env-github[]
+:imagesdir: ../../images
+endif::[]
+
 == The student project
 
 NetBeans started as a student project (originally called Xelfi) in the Czech
@@ -39,7 +43,7 @@ Xelfi was the first Java IDE written in Java, with its first pre-releases in
 . Xelfi was a fun project to work on, especially since the Java IDE space
 was uncharted territory at that time.
 
-image::./nb-history-1.png[caption="", title="Here you see the original group of students who constituted the original NetBeans Team"]
+image::about/nb-history-1.png[caption="", title="Here you see the original group of students who constituted the original NetBeans Team"]
 
 The project attracted enough interest that the students, once they graduated,
 decided that they could market it as a commercial product selling it as
@@ -115,7 +119,7 @@ NetBeans.org.
 
 [.feature]
 --
-image::./netbeans-2000-small.png[caption="", title"The NetBeans debugger on Linux in 2000", link="netbeans-2000.png"]
+image::about/netbeans-2000-small.png[caption="", title"The NetBeans debugger on Linux in 2000", link="netbeans-2000.png"]
 --
 
 In June 2000, the initial netbeans.org web site was launched.
@@ -129,7 +133,7 @@ feet. The next few years involved learning about what worked in terms of
 open-source processes. (In the first two years, the development process was so
 open that more time was spent debating than implementing.) 
 
-image::./netbeans-36-filesystems.png[caption="", title="NetBeans 3.6 structured the projects as filesystems"]
+image::about/netbeans-36-filesystems.png[caption="", title="NetBeans 3.6 structured the projects as filesystems"]
 
 The growing pains paid off. With NetBeans 3.5, huge strides in performance were
 made, and tests and processes put in place to prevent regressions. With 3.6,
@@ -147,7 +151,7 @@ and had initial support for mobility projects.
 
 [.feature]
 --
-image::./netbeans-40-small.png[caption="", title"NetBeans 4.0 and the Form Editor", link="netbeans-40.png"]
+image::about/netbeans-40-small.png[caption="", title"NetBeans 4.0 and the Form Editor", link="netbeans-40.png"]
 --
 
 The NetBeans 4.1 release (may 2005) was built on top of the new project
@@ -241,7 +245,7 @@ In March, 2019, xref:download/nb110/index.adoc[Apache NetBeans (Incubating) 11] 
 
 [.feature]
 --
-image::./nb11-small.png[caption="", title"Apache NetBeans (incubating) 11 showing the Lookup", link="nb11.png"]
+image::about/nb11-small.png[caption="", title"Apache NetBeans (incubating) 11 showing the Lookup", link="nb11.png"]
 --
 
 
