--- a/modules/ROOT/pages/blogs/entry/audio-of-virtual-apache-netbeans2.adoc
+++ b/modules/ROOT/pages/blogs/entry/audio-of-virtual-apache-netbeans2.adoc
@@ -28,7 +28,14 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 The third of a series of informal virtual meetups took place today, focused specifically on why/how/when to move netbeans.org to Apache.
 
