--- a/modules/ROOT/pages/blogs/entry/netbeans-status-at-fossback-18.adoc
+++ b/modules/ROOT/pages/blogs/entry/netbeans-status-at-fossback-18.adoc
@@ -28,7 +28,14 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 
 The session outlining 10 tips for large corporate projects moving to Apache, with NetBeans as an illustrative example, presented at FossBack '18, is now available on YouTube:
