--- a/modules/ROOT/pages/blogs/entry/php-7-4-support.adoc
+++ b/modules/ROOT/pages/blogs/entry/php-7-4-support.adoc
@@ -28,7 +28,14 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 Hi all. Today, we will briefly show you about PHP7.4 support which will be available in the *next NetBeans* version i.e. *NetBeans 11.2*.
 
