--- a/modules/ROOT/pages/blogs/entry/phpstan-support.adoc
+++ b/modules/ROOT/pages/blogs/entry/phpstan-support.adoc
@@ -28,7 +28,14 @@
 :toc: left
 :toc-title:
 :page-syntax: true
+
+// absolute url because of blog generation
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+ifndef::env-github[]
 :imagesdir: https://netbeans.apache.org
+endif::[]
 
 
 
