--- a/modules/ROOT/pages/community/nekobean.adoc
+++ b/modules/ROOT/pages/community/nekobean.adoc
@@ -25,13 +25,17 @@
 :toc: left
 :toc-title:
 
+ifdef::env-github[]
+:imagesdir: ../../images
+endif::[]
+
 //xref:./nekobean_ja.adoc[Japanese page is here(日本語のページはこちら)]
 
 == What's NekoBean
 
 NekoBean came from Japanese Speaking Community. It is a mascot of Apache NetBeans Community. (Neko means a cat in Japanese.)
 
-image::./nekobean250x250.png[NekoBean, 250, 250, align="center"]
+image::community/nekobean250x250.png[NekoBean, 250, 250, align="center"]
 
 image::https://licensebuttons.net/l/by-sa/2.1/jp/88x31.png[CC BY-SA 2.1 JP, 88, 31, link=https://creativecommons.org/licenses/by-sa/2.1/jp/deed.en, align="center"]
 
@@ -40,7 +44,7 @@ As for use, please confirm xref:./nekobean.adoc#_about_credit[about credit].
 
 == Various NekoBeans
 
-image:./nekobean50x50.png[NekoBean, 50, 50, link="http://nekobean.net/present/dl/svg.zip"] 
+image:community/nekobean50x50.png[NekoBean, 50, 50, link="http://nekobean.net/present/dl/svg.zip"] 
 link:http://nekobean.net/present/dl/svg.zip[Download SVG files as a zip]
 
 [cols="a,a,a"]
@@ -50,40 +54,40 @@ link:http://nekobean.net/present/dl/svg.zip[Download SVG files as a zip]
 .NekoBean
 [#nekobean]
 [caption="", align="center"]
-image::./nekobean250x250.png[NekoBean, 250, 250, link=nekobean.png] |
+image::community/nekobean250x250.png[NekoBean, 250, 250, link=nekobean.png] |
 
 .Happy
 [#nekobean-happy]
 [caption="", align="center"]
-image::./nekobean_happy250x250.png[NekoBean, 250, 250, link=nekobean_happy.png] |
+image::community/nekobean_happy250x250.png[NekoBean, 250, 250, link=nekobean_happy.png] |
 
 .Smile
 [#nekobean-smile]
 [caption="", align="center"]
-image::./nekobean_smile250x250.png[NekoBean, 250, 250, link=nekobean_smile.png] 
+image::community/nekobean_smile250x250.png[NekoBean, 250, 250, link=nekobean_smile.png] 
 
 |
 .Sad
 [#nekobean-sad]
 [caption="", align="center"]
-image::./nekobean_sad250x250.png[NekoBean, 250, 250, link=nekobean_sad.png] |
+image::community/nekobean_sad250x250.png[NekoBean, 250, 250, link=nekobean_sad.png] |
 
 .Zzz...
 [#nekobean-zzz]
 [caption="", align="center"]
-image::./nekobean_zzz250x250.png[NekoBean, 250, 250, link=nekobean_zzz.png] |
+image::community/nekobean_zzz250x250.png[NekoBean, 250, 250, link=nekobean_zzz.png] |
 
 .orz
 [#nekobean-orz]
 [caption="", align="center"]
-image::./nekobean_orz250x250.png[NekoBean, 250, 250, link=nekobean_orz.png]
+image::community/nekobean_orz250x250.png[NekoBean, 250, 250, link=nekobean_orz.png]
 
 |
 |
 .With Cat
 [#nekobean-with-cat]
 [caption="", align="center"]
-image::./nekobean_with_cat250x250.png[NekoBean, 250, 250, link=nekobean_with_cat.png]
+image::community/nekobean_with_cat250x250.png[NekoBean, 250, 250, link=nekobean_with_cat.png]
 |
 
 |===
