--- a/modules/ROOT/pages/download/nb100/index.adoc
+++ b/modules/ROOT/pages/download/nb100/index.adoc
@@ -27,6 +27,10 @@
 :toc-title: 
 :toclevels: 4
 
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+
 ////
 
 This is the NetBeans 10.0 feature page.
@@ -66,11 +70,11 @@ Examples:
 --
 Here goes some text
 
-image:./nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
+image:download/nb100/nb90-module-info.png[Adding module-info.java, title="Adding module-info.java", role="left", link="nb90-module-info.png"]
 
 And some more text
 
-image:./nb90-module-info-completion.png[Autocompletion in module-info.java, title="Autocompletion in module-info.java", role="right", link="nb90-module-info-completion.png"]
+image:download/nb100/nb90-module-info-completion.png[Autocompletion in module-info.java, title="Autocompletion in module-info.java", role="right", link="nb90-module-info-completion.png"]
 
 And even some more
 --
@@ -89,11 +93,11 @@ JDK 11 support has been enhanced in the following ways:
 - Support for link:https://openjdk.org/jeps/323[JEP 323, Local-Variable Syntax for Lambda Parameters].
 - Support for link:https://cwiki.apache.org/confluence/display/NETBEANS/LVTI+Support+for+Lamdba+Parameters+in+NetBeans+10[LVTI Support for Lamdba Parameters]
 
-image:./convert-to-var.png[New Hint to convert variable type to 'var' for lambda parameters(JDK 11 and above)]
+image:download/nb100/convert-to-var.png[New Hint to convert variable type to 'var' for lambda parameters(JDK 11 and above)]
 
 - Code completion for var lambda parameters
 
-image:./var-autocomplete-1st-param.png[Code completion support for var type lambda parameters.(JDK 11 and above)]
+image:download/nb100/var-autocomplete-1st-param.png[Code completion support for var type lambda parameters.(JDK 11 and above)]
 
 See the link:https://cwiki.apache.org/confluence/display/NETBEANS/Feature%3A+JDK+11[JDK 11 Confluence Page] for more detailed features.
 
@@ -110,15 +114,15 @@ These are some of the new features:
 
 You can now add trailing commas in function calls under PHP 7.3 (link:https://lists.apache.org/thread.html/3f7fee458f5b47d5531ad42350c6e7f619636f0708b6bbc33db2f49a@%3Cdev.netbeans.apache.org%3E[mailing list thread]).
 
-image::./nb100-php73-trailing-comma-in-function-calls-small.png["Trailing commas in function calls in PHP 7.3", role="left", link="nb100-php73-trailing-comma-in-function-calls.png"]
+image::download/nb100/nb100-php73-trailing-comma-in-function-calls-small.png["Trailing commas in function calls in PHP 7.3", role="left", link="nb100-php73-trailing-comma-in-function-calls.png"]
 
 And also use the link:https://wiki.php.net/rfc/list_reference_assignment[list reference assignment]
 
-image::./nb100-php73-list-reference-assignment.png[role="right"]
+image::download/nb100/nb100-php73-list-reference-assignment.png[role="right"]
 
 The link:https://wiki.php.net/rfc/flexible_heredoc_nowdoc_syntaxes[flexible Heredoc and Nowdoc Syntaxes] are also supported.
 
-image::./nb100-php73-flexible-heredoc-and-nowdoc-syntaxes.png[role="left"]
+image::download/nb100/nb100-php73-flexible-heredoc-and-nowdoc-syntaxes.png[role="left"]
 
 --
 
@@ -127,7 +131,7 @@ image::./nb100-php73-flexible-heredoc-and-nowdoc-syntaxes.png[role="left"]
 --
 For PHP 7.2 we support trailing commas in list syntax, coloring for object types and PHP version in project properties.
 
-image::./nb100_php_editor_php_version_72_trailing_commas_in_list_syntax.png[role="right"]
+image::download/nb100/nb100_php_editor_php_version_72_trailing_commas_in_list_syntax.png[role="right"]
 --
 
 === PHP 7.1
@@ -136,7 +140,7 @@ image::./nb100_php_editor_php_version_72_trailing_commas_in_list_syntax.png[role
 For PHP 7.1 we have class constant visibility, multi-catch exception handling, nullable types, support for keys in list(), 
 coloring for new keywords (void, iterable).
 
-image::./nb100_php_editor_class_constant_visibility_01.png[role="left"]
+image::download/nb100/nb100_php_editor_class_constant_visibility_01.png[role="left"]
 --
 
 === More PHP features
@@ -155,7 +159,7 @@ JUnit 5.3.1 has been added as a new Library to NetBeans, so you can quickly add
 it to your Java projects. For Maven projects without existing tests, JUnit 5
 is now the default JUnit version.
 
-image:./nb100-junit5-library-small.png[JUnit 5 Library, role="left", link="nb100-junit5-library.png"]
+image:download/nb100/nb100-junit5-library-small.png[JUnit 5 Library, role="left", link="nb100-junit5-library.png"]
 
 The JUnit 5 `@Testable` annotation is also supported. Any method that includes
 an annotation that inherits from this, will be allowed to be executed with
@@ -165,7 +169,7 @@ Default JUnit 5 Test Template provided out of the box. Note JUnit 5 doesn't
 currently support test suite's for its Jupiter engine, so the template provided
 will attempt to create a test suite using the Vintage engine. 
 
-image:./nb100-junit5-templates-small.png[JUnit 5 Templates, role="right", link="nb100-junit5-templates.png"]
+image:download/nb100/nb100-junit5-templates-small.png[JUnit 5 Templates, role="right", link="nb100-junit5-templates.png"]
 
 --
 
