--- a/modules/ROOT/pages/download/nb111/index.adoc
+++ b/modules/ROOT/pages/download/nb111/index.adoc
@@ -32,6 +32,10 @@
 :experimental:
 :linkattrs:
 
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+
 Apache NetBeans 11.1 is the first Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[first release of the new quarterly release cycle].
 
 TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1 release has not been tested as heavily as the LTS release and may therefore be less stable. Use 11.1 to use the latest features and to provide feedback for the next LTS release, scheduled for April 2020. Go here to download  xref:download/nb110/nb110.adoc[Apache NetBeans 11.0], the current LTS release.
@@ -44,7 +48,7 @@ The highlights of enhancements in the Java EE area are the new Java EE 8 support
 
 - Java EE 8 support, for the first time, for Maven-based and Gradle-based Web applications. The new Java EE 8 support provides the ability to create Java EE 8 applications and deploy to a Java EE 8 container, with new "webapp-javaee8" Maven archetype created for use with Apache NetBeans.
 
-image::./new-java-ee-8.png[]
+image::download/nb111/new-java-ee-8.png[]
 
 - Payara integration out of the box for the first time, with thanks to the Payara team. 
 - Support for GlassFish 5.0.1.
@@ -60,11 +64,11 @@ The highlights of enhancements specifically in the Java Editor area are the supp
 - Integration of support for JEP-330: link:https://github.com/apache/netbeans/pull/1171[https://github.com/apache/netbeans/pull/1171]
 - Initial support for inline parameter name hints for Java: link:https://github.com/apache/netbeans/pull/1247[https://github.com/apache/netbeans/pull/1247]
 
-image::./inline-parameters.png[]
+image::download/nb111/inline-parameters.png[]
 
 - Code completion for JEP-325 preview feature for multiple case labels: link:https://github.com/apache/netbeans/pull/1175[https://github.com/apache/netbeans/pull/1175]
 
-image::./code-completion-multiple-case.png[]
+image::download/nb111/code-completion-multiple-case.png[]
 
 - Hint for converting to JEP-325 preview feature for switch expressions: link:https://github.com/apache/netbeans/pull/1193[https://github.com/apache/netbeans/pull/1193]
 - Hint to turn on Preview Features in Maven-based Java projects: link:https://github.com/apache/netbeans/pull/1285[https://github.com/apache/netbeans/pull/1285]
@@ -76,7 +80,7 @@ image::./code-completion-multiple-case.png[]
 
 - OpenJFX samples included, with thanks to the Gluon team: link:https://github.com/apache/netbeans/pull/1241[https://github.com/apache/netbeans/pull/1241]
 
-image::./openjfx-samples.png[]
+image::download/nb111/openjfx-samples.png[]
 
 === Maven
 
@@ -134,7 +138,7 @@ image::./openjfx-samples.png[]
 - Gradle JavaEE Support: link:https://github.com/apache/netbeans/pull/1215[https://github.com/apache/netbeans/pull/1215]
 - Initial support for modular Java project in Gradle: link:https://github.com/apache/netbeans/pull/1276[https://github.com/apache/netbeans/pull/1276]
 
-image::./gradle-jigsaw.png[]
+image::download/nb111/gradle-jigsaw.png[]
 
 - Java Frontend Application wizard for Gradle: link:https://github.com/apache/netbeans/pull/1154[https://github.com/apache/netbeans/pull/1154]
 - Add debugger support for Gradle Web Projects: link:https://github.com/apache/netbeans/pull/1289[https://github.com/apache/netbeans/pull/1289]
