--- a/modules/ROOT/pages/download/nb113/index.adoc
+++ b/modules/ROOT/pages/download/nb113/index.adoc
@@ -31,6 +31,10 @@
 :experimental:
 :linkattrs:
 
+ifdef::env-github[]
+:imagesdir: ../../../images
+endif::[]
+
 Apache NetBeans 11.3 is the third Apache NetBeans release outside the Apache Incubator and the link:https://cwiki.apache.org/confluence/display/NETBEANS/Release+Schedule[third release of the new quarterly release cycle].
 
 TIP: The LTS release of the Apache NetBeans 11 cycle is Apache NetBeans 11.0. The 11.1, 11.2, and 11.3 releases have not been tested as heavily as the LTS release and may therefore be less stable. Use 11.3 to use the latest features and to provide feedback for the next LTS release, scheduled for 2020. Go here to download  xref:download/nb110/nb110.adoc[Apache NetBeans 11.0], the current LTS release.
@@ -49,14 +53,14 @@ The highlights of enhancements in the Java area are focused on support for JDK 1
 
 [.feature]
 --
-image::./record-keyword.png[role="left", link="record-keyword.png"]
+image::download/nb113/record-keyword.png[role="left", link="record-keyword.png"]
 -- 
 
 - link:https://openjdk.org/jeps/305[JEP 305]: Pattern Matching for instanceof (Preview Feature) 
 
 [.feature]
 --
-image::./ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
+image::download/nb113/ezgif.com-video-to-gif.gif[role="left", link="ezgif.com-video-to-gif.gif"]
 --  
 
 TIP: link:https://openjdk.org/jeps/12[JEP 12] provides for a preview language or VM feature, which "is a new feature of the Java SE Platform that is fully specified, fully implemented, and yet impermanent. It is available in a JDK feature release to provoke developer feedback based on real world use; this may lead to it becoming permanent in a future Java SE Platform".
@@ -105,14 +109,14 @@ In addition to the initial integration of Java EE features into Apache NetBeans 
 
 [.feature]
 --
-image::./jsf-23-websocket.png[role="left", link="jsf-23-websocket.png"]
+image::download/nb113/jsf-23-websocket.png[role="left", link="jsf-23-websocket.png"]
 -- 
 
 Also, you can take advantage of the ability to inject JSF artifacts with support for JSF 2.3, i.e., support for CDI changes for JSF artifact injection.
 
 [.feature]
 --
-image::./cdi-inject.png[role="left", link="cdi-inject.png"]
+image::download/nb113/cdi-inject.png[role="left", link="cdi-inject.png"]
 -- 
 
 TIP: Currently, Apache NetBeans supports Java EE, though not yet Jakarta EE. The Jakarta EE APIs are identical to Java EE 8, though there are new JARs that are now packaged under the Eclipse Foundation and all APIs have been slightly renamed. Apache NetBeans 12.0 is targeted for the integration of Jakarta EE 8 support.   
@@ -123,11 +127,11 @@ A strong focus of the 11.3 release is around appearance, since the NetBeans dark
 
 ==== FlatLaf Look and Feel Support
 
-image::./FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
+image::download/nb113/FlatLaf-11.3.png[role="left", link="FlatLaf-11.3.png"]
 
 ==== Dark Metal and Dark Nimbus Look and Feel Support
 
-image::./dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
+image::download/nb113/dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.png"]
 
 ==== HiDPI
 
@@ -162,7 +166,7 @@ image::./dark-metal-nimbus-11.3.png[role="left", link="dark-metal-nimbus-11.3.pn
 
 - TypeScript Editor
 
-image::./typescript-11.3.png[role="left", link="typescript-11.3.png"]
+image::download/nb113/typescript-11.3.png[role="left", link="typescript-11.3.png"]
 
 - Chrome connector connection with NetBeans has been fixed.
 
@@ -176,7 +180,7 @@ image::./typescript-11.3.png[role="left", link="typescript-11.3.png"]
 - Library updates, for example, to Groovy 2.5.9, junit 5.5.2, and GraalVM 19.3.0.
 - Janitor helps to identify and remove old and unused NetBeans user directories.
 
-image::./janitor-11.3.png[role="left", link="janitor-11.3.png"]
+image::download/nb113/janitor-11.3.png[role="left", link="janitor-11.3.png"]
 
 === Notes
 
