--- a/modules/ROOT/pages/download/nb22/index.adoc
+++ b/modules/ROOT/pages/download/nb22/index.adoc
@@ -23,22 +23,24 @@ See https://www.apache.org/dev/release-download-pages.html
 for important requirements for download pages for Apache projects.
 
 ////
-= Downloading Apache NetBeans 21
+= Downloading Apache NetBeans 22
 :page-layout: page_noaside
 :page-tags: download
 :jbake-status: published
-:keywords: Apache NetBeans 21 Download
-:description: Apache NetBeans 21 Download
+:keywords: Apache NetBeans 22 Download
+:description: Apache NetBeans 22 Download
 :toc: left
 :toc-title:
 :icons: font
 
 // check version above
-:netbeans-version: 21
+:netbeans-version: 22
 
 // base URLs - when archiving, delete the next 2 lines and uncomment the following 2
-:url-download: https://archive.apache.org/dist/netbeans/
-:url-download-keychecksum: https://archive.apache.org/dist/netbeans/
+:url-download: https://www.apache.org/dyn/closer.lua/netbeans/
+:url-download-keychecksum: https://downloads.apache.org/netbeans/
+// :url-download: https://archive.apache.org/dist/netbeans/
+// :url-download-keychecksum: https://archive.apache.org/dist/netbeans/
 
 //// 
 url-download depends of release status archived or not
@@ -50,7 +52,7 @@ https://archive.apache.org/dist/netbeans/  (//archived)
 https://downloads.apache.org/netbeans/ (//current)
 ////
 
-Apache NetBeans {netbeans-version} was released on February 20, 2024.
+Apache NetBeans {netbeans-version} was released on May 29, 2024.
 ////
 NOTE: It's mandatory to link to the source. It's optional to link to the binaries.
 NOTE: It's mandatory to link against https://www.apache.org for the sums & keys. https is recommended.
@@ -103,7 +105,7 @@ Foundation. They may include other contents (eg. JDK) under additional license t
 
 == Deployment Platforms
 
-The Apache NetBeans {netbeans-version} binary releases require JDK 11+, and officially support running on JDK 11, 17 and 21.
+The Apache NetBeans {netbeans-version} binary releases require JDK 17+, and officially support running on JDK 17, 21 and 22.
 
 TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can use.
 
@@ -111,7 +113,7 @@ TIP: The Runtime JDK NetBeans uses does not influence the JDK range projects can
 
 * On windows you may encounter the following JDK issue: "Comparison method violates its general contract"
 +
-link:https://github.com/apache/netbeans/discussions/6361[Resolution of the issue]
+resolution: use latest JDK update release, link:https://github.com/apache/netbeans/discussions/6361[more info]
 
 * link:https://github.com/apache/netbeans/issues[All Issues on GitHub]
 
@@ -130,8 +132,8 @@ in a directory of your liking.
 As in any other Apache Project, the Apache NetBeans Community approved this release
 through the following voting processes in our xref:community/mailing-lists.adoc[mailing lists]:
 
-- link:https://lists.apache.org/thread/tt7h9tq087q5zj0cgb7vhnojn5hbccl3[PMC vote]
-- link:https://lists.apache.org/thread/jzhcxv8jczl83g01vlzlxfpgjb5fk8yl[PMC vote result]
+- link:https://lists.apache.org/thread/rvw8f43lgbpjmpqmdwq1cbkcnpf3ryyv[PMC vote]
+- link:https://lists.apache.org/thread/5lq00jf5r8gwl4mt6qmmy5xzn6okf7fg[PMC vote result]
 
 == Earlier Releases
 
