--- a/modules/ROOT/pages/download/dev/index.adoc
+++ b/modules/ROOT/pages/download/dev/index.adoc
@@ -34,23 +34,11 @@ Please visit link:https://ci-builds.apache.org/job/Netbeans/job/netbeans-linux/[
 
 == Building from source
 
-You can of course build Apache NetBeans from source. To do so:
+You can of course build Apache NetBeans from source. 
 
-. Clone the link:https://github.com/apache/netbeans[https://github.com/apache/netbeans] GitHub repository.
-. Install an LTS release of the Java Development Kit. (JDK 11+)
-. Install Apache Ant 1.10 or greater (link:https://ant.apache.org/[https://ant.apache.org/]).
-. Set or verify that the environment variables JAVA_HOME and ANT_HOME are properly defined.
+For more information goto: link:https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment[https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment]
 
-Once you're all set, enter the `netbeans` directory:
-
-- To build the Apache NetBeans IDE, according to the JDK type `ant build` in the command line or shell of your choice
-- The build will generate a binary zip bundle of the IDE at `./nbbuild/NetBeans-<version-hash>-release.zip`, and you can:
-  ** Extract that zip in a place of your choosing and run `netbeans/bin/netbeans` (or `netbeans/bin/netbeans.exe` on Windows).
-  ** Type `ant tryme` to run the Apache NetBeans IDE directly from the build folder rather than the zip for development purposes.
-
-For details, go here: link:https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment[https://cwiki.apache.org/confluence/display/NETBEANS/Development+Environment]
-
-Now that you have built Apache NetBeans from source you may want to xref:participate/submit-pr.adoc[submit a pull request].
+After you have built Apache NetBeans from source you may want to xref:participate/submit-pr.adoc[submit a pull request].
 
 === Repositories
 
@@ -62,8 +50,4 @@ This is a list of Apache NetBeans repositories:
 - link:https://github.com/apache/netbeans-website-cleanup[https://github.com/apache/netbeans-website-cleanup] A repository used to clean up existing documentation from pass:[http://netbeans.org]
 - link:https://github.com/apache/netbeans-tools[https://github.com/apache/netbeans-tools] Tools and facilities in support of the Apache NetBeans project.
 - Emilian Bold has converted the previous Mercurial repository (pass:[http://hg.netbeans.org]) to git, for historical reference, and has kindly uploaded it to GitHub at https://github.com/emilianbold/netbeans-releases. Thanks, Emilian!
-
-
-
-
 
