--- a/modules/ROOT/pages/download/archive/index.adoc
+++ b/modules/ROOT/pages/download/archive/index.adoc
@@ -28,6 +28,12 @@
 
 Older Apache NetBeans releases can still be downloaded, but are no longer supported.
 
+== Apache NetBeans 22
+
+Apache NetBeans 22 was released on May 29, 2024
+
+link:https://github.com/apache/netbeans/releases/tag/22[Features, role="button"] xref:download/nb21/index.adoc[Download, role="button success"]
+
 == Apache NetBeans 21
 
 Apache NetBeans 21 was released on February 24, 2024
